# gvfs_mzip

./: .clang-format  .clangd  MZipUtil.cpp  MZipUtil.h  README.MD  meson.build
MZip/: meson.build
MZip/include/: DosDateTime.h  MZFile.h  MZip.h  MZipConstants.h  MZipRecovery.h  ZipStructs.h  ZipTree.h  ZipTrie.h
MZip/src/: MZFile.cpp  MZip.cpp  MZipRecovery.cpp  ZipTree.cpp  ZipTrie.cpp
MZipCli/: meson.build
MZipCli/src/: main.cpp
MZipGui/: meson.build
MZipGui/include/: MZipGui.h
MZipGui/src/: MZipGui.cpp  main.cpp
MZipGui/ui/: main_window.slint
